--- a/src/pages/Card/index.css
+++ b/src/pages/Card/index.css
@@ -12,34 +12,43 @@
     width: 500px;
 }
 .mn h1{
+  margin-top: 50px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin-left: 40px;
+    font-size: 20px;
 }
 
 .mn h2{
+  margin-top: 15px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin-left: 40px;
     color: silver;
 }
 .mn p{
+  margin-top: 15px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin-left: 40px;
 }
 .mn h5{
+  margin-top: 20px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 13px;
     margin-left: 40px;
     width: 450px;
 }
 .amount label{
+  margin-top: 20px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     margin-left: 40px;
 }
+
 .amount select{
     margin-left: 40px;
     height: 30px;
     width: 180px;
     border-radius: 5px;
+    border: 2px solid black;
+    margin-top: 30px;
 }
 .head button{
     margin-top: 50px;
